--- a/public/src/templates/vehicles/form.html
+++ b/public/src/templates/vehicles/form.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title pull-left">Veículo</h3>
         <div class="pull-right" ng-if="!isEditing">
-            <a href="#/vehicles/{{vehicle.id}}/edit" class="btn btn-link btn-xs" title="Editar"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+            <a href="#!/vehicles/{{vehicle.id}}/edit" class="btn btn-link btn-xs" title="Editar"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
             <a href="javascript:void(0)" ng-click="remove(vehicle)" class="btn btn-link btn-xs" title="Remover"><span class="glyphicon glyphicon-trash text-danger" aria-hidden="true"></span></a>
         </div>
         <div class="clearfix"></div>
@@ -24,7 +24,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="vehicleModel">Marca</label>
+                <label for="vehicleModel">Modelo</label>
                 <select class="form-control" id="vehicleModel" required ng-disabled="!isEditing" ng-model="vehicle.model_id">
                     <option ng-repeat="option in modelList | filter:{ brand_id: vehicle.brand_id }" value="{{option.id}}">{{option.name}}</option>
                 </select>
